; ModuleID = '/home/carl/AnghaBench/linux/fs/xfs/libxfs/extr_xfs_rmap_btree.c_xfs_rmapbt_init_cursor.c'
source_filename = "/home/carl/AnghaBench/linux/fs/xfs/libxfs/extr_xfs_rmap_btree.c_xfs_rmapbt_init_cursor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xfs_btree_cur = type { i64, i32, %struct.TYPE_6__, i32, i32, i32*, i32, %struct.xfs_mount*, %struct.xfs_trans* }
%struct.TYPE_6__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i32, %struct.xfs_buf* }
%struct.xfs_mount = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32 }
%struct.xfs_trans = type { i32 }
%struct.xfs_buf = type { i32 }
%struct.xfs_agf = type { i32* }

@xfs_btree_cur_zone = common dso_local global i32 0, align 4
@KM_NOFS = common dso_local global i32 0, align 4
@XFS_BTNUM_RMAP = common dso_local global i64 0, align 8
@XFS_BTREE_CRC_BLOCKS = common dso_local global i32 0, align 4
@XFS_BTREE_OVERLAPPING = common dso_local global i32 0, align 4
@xfs_rmapbt_ops = common dso_local global i32 0, align 4
@xs_rmap_2 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.xfs_btree_cur* @xfs_rmapbt_init_cursor(%struct.xfs_mount* %0, %struct.xfs_trans* %1, %struct.xfs_buf* %2, i32 %3) #0 {
  %5 = alloca %struct.xfs_mount*, align 8
  %6 = alloca %struct.xfs_trans*, align 8
  %7 = alloca %struct.xfs_buf*, align 8
  %8 = alloca i32, align 4
  %9 = alloca %struct.xfs_agf*, align 8
  %10 = alloca %struct.xfs_btree_cur*, align 8
  store %struct.xfs_mount* %0, %struct.xfs_mount** %5, align 8
  store %struct.xfs_trans* %1, %struct.xfs_trans** %6, align 8
  store %struct.xfs_buf* %2, %struct.xfs_buf** %7, align 8
  store i32 %3, i32* %8, align 4
  %11 = load %struct.xfs_buf*, %struct.xfs_buf** %7, align 8
  %12 = call %struct.xfs_agf* @XFS_BUF_TO_AGF(%struct.xfs_buf* %11)
  store %struct.xfs_agf* %12, %struct.xfs_agf** %9, align 8
  %13 = load i32, i32* @xfs_btree_cur_zone, align 4
  %14 = load i32, i32* @KM_NOFS, align 4
  %15 = call %struct.xfs_btree_cur* @kmem_zone_zalloc(i32 %13, i32 %14)
  store %struct.xfs_btree_cur* %15, %struct.xfs_btree_cur** %10, align 8
  %16 = load %struct.xfs_trans*, %struct.xfs_trans** %6, align 8
  %17 = load %struct.xfs_btree_cur*, %struct.xfs_btree_cur** %10, align 8
  %18 = getelementptr inbounds %struct.xfs_btree_cur, %struct.xfs_btree_cur* %17, i32 0, i32 8
  store %struct.xfs_trans* %16, %struct.xfs_trans** %18, align 8
  %19 = load %struct.xfs_mount*, %struct.xfs_mount** %5, align 8
  %20 = load %struct.xfs_btree_cur*, %struct.xfs_btree_cur** %10, align 8
  %21 = getelementptr inbounds %struct.xfs_btree_cur, %struct.xfs_btree_cur* %20, i32 0, i32 7
  store %struct.xfs_mount* %19, %struct.xfs_mount** %21, align 8
  %22 = load i64, i64* @XFS_BTNUM_RMAP, align 8
  %23 = load %struct.xfs_btree_cur*, %struct.xfs_btree_cur** %10, align 8
  %24 = getelementptr inbounds %struct.xfs_btree_cur, %struct.xfs_btree_cur* %23, i32 0, i32 0
  store i64 %22, i64* %24, align 8
  %25 = load i32, i32* @XFS_BTREE_CRC_BLOCKS, align 4
  %26 = load i32, i32* @XFS_BTREE_OVERLAPPING, align 4
  %27 = or i32 %25, %26
  %28 = load %struct.xfs_btree_cur*, %struct.xfs_btree_cur** %10, align 8
  %29 = getelementptr inbounds %struct.xfs_btree_cur, %struct.xfs_btree_cur* %28, i32 0, i32 1
  store i32 %27, i32* %29, align 8
  %30 = load %struct.xfs_mount*, %struct.xfs_mount** %5, align 8
  %31 = getelementptr inbounds %struct.xfs_mount, %struct.xfs_mount* %30, i32 0, i32 0
  %32 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 4
  %34 = load %struct.xfs_btree_cur*, %struct.xfs_btree_cur** %10, align 8
  %35 = getelementptr inbounds %struct.xfs_btree_cur, %struct.xfs_btree_cur* %34, i32 0, i32 6
  store i32 %33, i32* %35, align 8
  %36 = load %struct.xfs_btree_cur*, %struct.xfs_btree_cur** %10, align 8
  %37 = getelementptr inbounds %struct.xfs_btree_cur, %struct.xfs_btree_cur* %36, i32 0, i32 5
  store i32* @xfs_rmapbt_ops, i32** %37, align 8
  %38 = load %struct.xfs_agf*, %struct.xfs_agf** %9, align 8
  %39 = getelementptr inbounds %struct.xfs_agf, %struct.xfs_agf* %38, i32 0, i32 0
  %40 = load i32*, i32** %39, align 8
  %41 = load i64, i64* @XFS_BTNUM_RMAP, align 8
  %42 = getelementptr inbounds i32, i32* %40, i64 %41
  %43 = load i32, i32* %42, align 4
  %44 = call i32 @be32_to_cpu(i32 %43)
  %45 = load %struct.xfs_btree_cur*, %struct.xfs_btree_cur** %10, align 8
  %46 = getelementptr inbounds %struct.xfs_btree_cur, %struct.xfs_btree_cur* %45, i32 0, i32 4
  store i32 %44, i32* %46, align 4
  %47 = load i32, i32* @xs_rmap_2, align 4
  %48 = call i32 @XFS_STATS_CALC_INDEX(i32 %47)
  %49 = load %struct.xfs_btree_cur*, %struct.xfs_btree_cur** %10, align 8
  %50 = getelementptr inbounds %struct.xfs_btree_cur, %struct.xfs_btree_cur* %49, i32 0, i32 3
  store i32 %48, i32* %50, align 8
  %51 = load %struct.xfs_buf*, %struct.xfs_buf** %7, align 8
  %52 = load %struct.xfs_btree_cur*, %struct.xfs_btree_cur** %10, align 8
  %53 = getelementptr inbounds %struct.xfs_btree_cur, %struct.xfs_btree_cur* %52, i32 0, i32 2
  %54 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %53, i32 0, i32 0
  %55 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %54, i32 0, i32 1
  store %struct.xfs_buf* %51, %struct.xfs_buf** %55, align 8
  %56 = load i32, i32* %8, align 4
  %57 = load %struct.xfs_btree_cur*, %struct.xfs_btree_cur** %10, align 8
  %58 = getelementptr inbounds %struct.xfs_btree_cur, %struct.xfs_btree_cur* %57, i32 0, i32 2
  %59 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %58, i32 0, i32 0
  %60 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %59, i32 0, i32 0
  store i32 %56, i32* %60, align 8
  %61 = load %struct.xfs_btree_cur*, %struct.xfs_btree_cur** %10, align 8
  ret %struct.xfs_btree_cur* %61
}

declare dso_local %struct.xfs_agf* @XFS_BUF_TO_AGF(%struct.xfs_buf*) #1

declare dso_local %struct.xfs_btree_cur* @kmem_zone_zalloc(i32, i32) #1

declare dso_local i32 @be32_to_cpu(i32) #1

declare dso_local i32 @XFS_STATS_CALC_INDEX(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
